--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/testHelper.js ./src/**/*.js ./test/**/*Spec.js --recursive",
     "test:watch": "npm run test -- --watch"
   },
@@ -21,7 +22,9 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "redux": "^3.5.2",
+    "socket.io": "^1.4.8"
   },
   "dependencies": {
     "immutable": "^3.8.1"
